# unshuffle

./: .env.dev  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
data/: config.json
gui/: __init__.py  __main__.py
scripts/: app_binary_entrypoint.py  backfill_anchor_profile_json.py  build_app_binary.py  build_linux_appimage.py  build_linux_deb.py  build_macos_dmg.sh  build_macos_pkg.sh  build_native_extractor.py  build_windows_installer.ps1  check_layer_imports.py  check_native_extractor_bundle.py  dev_database_maintenance.py  gui_issue_tracker.py  performance_baselines.py  prepare_macos_icon.sh
tests/: README.md  test_algorithm.py  test_audio_characterization.py  test_audio_runtime_behavior.py  test_bridge_characterization.py  test_cli_bridge_characterization.py  test_cli_validation.py  test_coherence_controller.py  test_coherence_engine.py  test_coherence_hnsw.py  test_coherence_persistence.py  test_concurrency.py  test_config_characterization.py  test_database_maintenance_characterization.py  test_destructive_path_safety.py  test_diagnostics_characterization.py  test_discovery.py  test_engine.py  test_extractor_similarity.py  test_file_diagnostics.py  test_footer_state.py  test_frequency_characterization.py  test_gui_model_characterization.py  test_gui_search_characterization.py  test_gui_shortcuts_characterization.py  test_gui_theme_characterization.py  test_gui_workflow_characterization.py  test_hashing.py  test_history_page.py  test_imports.py  test_layer_import_guard.py  (+19 more)
unshuffle_extractor/: CMakeLists.txt  fft_utils.h  unshuffle_extractor.cpp  unshuffle_extractor.h
(+332 files in other folders)
